# ror-dependencies

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  pthread.h
.github/workflows/: build-deps.yml
angelscript/: CMakeLists.txt
caelum/: CMakeLists.txt
cmake/: CopyWxWidgetLibs.cmake
curl/: CMakeLists.txt
fmt/: CMakeLists.txt
mygui/: CMakeLists.txt
ogre/: CMakeLists.txt  scriptlexer.patch
openal/: CMakeLists.txt
pagedgeometry/: CMakeLists.txt
patches/: OgreD3D9Prerequisites.h  OgreTerrain.cpp  Ogre_RenderSystem_Direct3D9_CMakeLists.txt
rapidjson/: CMakeLists.txt
socketw/: CMakeLists.txt
tools/: patch.py
win32-directx/: README.txt
